--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ It maintains the entire Accounting jobs like sorting of documents , entering &am
 <li>Quick Books is an online package can be operated at anytime and anywhere in the world  and can be operated on Desk Top computers, Laptops, Tablets, and even Smart Mobile phones. It uses the modern technology called Cloud technology and has made Accounts writing jobs very easy &amp; Simple.</li>
 
 
-<li>Prepare Project Reports, Budgets and Cash / Fund Flow statements and all the Accounting Reports with diagrams and graphs as and when required by your companies instantly  with responsibility as &amp; when required instantly.</li>
+<li>Prepare Project Reports, Budgets and Cash / Fund Flow statements and all the Accounting Reports with diagrams and graphs as and when required by your companies instantly  with responsibility as &amp; when required.</li>
 
 
 <li>We have developed a proper way of Online Implementing procedures for writing &amp; maintaining Accounts.</li>
