--- a/index.html
+++ b/index.html
@@ -66,33 +66,36 @@
      </div>
     
 
-   <h1> ACCFIN SERVICES is an ideal ONLINE providing Complete Accounts Writing Services and is a Very Professional and Reliable company</h1>
+   <h1> ACCFIN SERVICES is a Professional and Reliable company  providing Complete Accounts Writing  sevices and Taxation Services on an Online Basis – Outsourcing Company. </h1>
 <div class="intro"   >
 
-<p>   Considering the Current Economic Scenario in India where all the
- steps are being taken to making it a Digitalised country </p>
+<p> Considering the Current Economic Scenario in India where all the steps are being taken to making it a Digitalised country
+All the companies doing Business in India and earning Net Profits above Rs 3,00,000.00 per annum will have to maintain their Accounts compulsorily and submit the year end Profit &amp; Loss Accounts and Balance Sheets of the companies to the Government for paying their Taxes due every year otherwise the companies will have to pay heavy interests and penalties if not done on time properly </p>
 
-<p>All the companies doing Business in India and earning Net Profits above Rs 3,00,000.00 per annum will have to maintain their Accounts compulsorily and submit the year end Profit &amp; Loss Accounts and Balance Sheets of the companies to the Government for paying their Taxes due every year otherwise the companies will have to pay heavy interests and penalties if not done on time properly</p>
+
 
 </div>
 <br>
 
 <div class="mid">
 
-<p>ACCFIN SERVICES provides complete Accounts writing &amp; Financial Management services along with complete Tax compliance services-For various Business organizations and companies such as</p>
+<p>ACCFIN SERVICES provides complete Accounts writing &amp; Financial Management services along with complete Tax compliance services-For various Business organizations and companies such as :- </p>
 
 <ul>
 
-<li>Free Lancers or Self Employed Owners companies like Web Designing, Event Management &amp; others.</li>
+<li>Free Lancers or Self Employed or Consultants/Owners companies like Web Designing, Event Management, Catering Companies, Health Clinics, Law Firms &amp; others.</li>
 
-<li>Services Providing Companies</li>
+<li>Services Providing Companies like Pest Control companies, providing Repairs &amp; Services, Movie Theatres etc.
+All the Start - up Companies</li>
 
-<li>Start - up Companies </li>
 
-<li>Small &amp; Medium Trading Companies</li>
-
+<li>Small &amp; Medium Trading Companies - trading of all the goods &amp; products in  which you are dealing with.</li>
 
 </ul>
+
+
+
+
 </div>
 
 <br>
@@ -102,13 +105,16 @@
 
 <ol>
 
+<li>ACCFIN SERVICES provides complete Accounting writing &amp; Finance Management jobs for the companies with very good accounting procedures and professional staff - at very Affordable prices – at around 50 % discounted prices. We out source the Accounting jobs of a company with no requirement for the company to keep any Accountants in the company. It maintains the entire Accounting jobs like sorting of documents , entering &amp; posting of all the transactions- up-to the Finalization of Accounts- i.e. upto Preparation of Annual P &amp; L Accounts of the year and Balance Sheets  as at the Year End.</li>
 
-<li> ACCFIN SERVICES provides  complete Accounting writing &amp; Finance Management jobs for the companies  with very good accounting procedures and professional staff - at very Affordable prices – at arround 50 % discounted prices. We out source the Accounting jobs of a company with no requifrement for the company to keep any Accountants in the company.
-It maintains the entire Accounting jobs like sorting of documents , entering &amp; posting of all the transactions-  up-to the Finalization of Accounts- i.e. upto Preparation of Annual P &amp; L Accounts of the year and B/S as at the Year End.</li>
 
-<li>With the requirement of various Complete Taxation Compliances such as Income Tax, Services Tax, Vat &amp; Prof. Tax - e-filings of various Returns &amp; Forms etc. upto hearing of the tax cases.</li>
+<li> With the requirement of various Complete Taxation Compliances such as Income Tax, Services Tax, Vat &amp; Prof. Tax - e-filings of various Returns &amp; Forms etc. upto hearing of the tax cases.</li>
 
-<li>We also provide the easiest way to launch your Company Registration of any Private Companies Ltd. Companies, Partnership Firms &amp; Sole – Proprietership companies etc.</li>
+<li>Also provide the easiest ways to launch your Company. By handling  Registration of any Private Companies Ltd. Companies, Partnership Firms &amp; Sole – Proprietership companies etc.</li>
+
+
+
+
 
 
 </div>
@@ -120,12 +126,13 @@ It maintains the entire Accounting jobs like sorting of documents , entering &am
 
 <ol class="points" type="A">
 
+
 <li>We do these accounts writing work on Quick Books online Accounting Packages &amp; Tally ERP 9 Accounting packages.</li>
 
-<li>Quick Books is an online package can be operated at anytime and anywhere in the world  and can be operated on Desk Top computers, Laptops, Tablets, and even Smart Mobile phones. It uses the modern technology called Cloud technology and has made Accounts writing jobs very easy &amp; Simple.</li>
+<li>Quick Books is an online package can be operated at anytime and anywhere in the world and can be operated on Desk Top computers, Laptops, Tablets, and even Smart Mobile phones. It uses the modern technology called Cloud technology and has made Accounts writing jobs very easy &amp; Simple.
 
 
-<li>Prepare Project Reports, Budgets and Cash / Fund Flow statements and all the Accounting Reports with diagrams and graphs as and when required by your companies instantly  with responsibility as &amp; when required.</li>
+<li>Prepare Project Reports, Budgets and Cash / Fund Flow statements and all the Accounting Reports with diagrams and graphs as and when required by your companies  with responsibility as &amp; when required by your company on instance basis.</li>
 
 
 <li>We have developed a proper way of Online Implementing procedures for writing &amp; maintaining Accounts.</li>
@@ -133,15 +140,18 @@ It maintains the entire Accounting jobs like sorting of documents , entering &am
 
 <li>Our services are preferred by the young generation Owners &amp; Directors of the Company. We also undertake to bring your any pending Accounts up-to-date.</li>
 
-<li>We like to reiterate again tha we do it at a very minimum price- 50% Discounted price which is much lesser than maintaining your accounting work in your own in-house Accounting Department and recruiting Accounting staff for your companies.
-We also do the Accounting Work very quickly and Save your 50% of the time. </li>
+<li> We like to reiterate again that we do it at a very minimum price- 50% Discounted price which is much lesser than maintaining your accounting work in your own in-house Accounting Department and recruiting Accounting staff for your companies. We also do the Accounting Work very quickly and Save your 50% of the time.</li>
 
 
-<li>We have a Strong, Experienced, Qualified &amp; Courteous team of QuickBooks certified  staff &amp; Tally ERP 9 professional staff &amp; Efficient Messenger Boys.</li>
+<li>We have a Strong, Experienced, Qualified &amp; Courteous team of QuickBooks certified staff &amp; Tally ERP 9 professional staff &amp; Efficient Messenger Boys.</li>
 
-<li>The management of Your Company has only to focus their time on the growth of the company and Make more Profits for the company.</li>
+<li> The management of Your Company has only to focus their time on the growth of the company and Make more Profits for the company.</li>
 
-<li>We will take charge of the Full Accounts of your company Accounts &amp; keep your Accounts Up-dated on a Daily and Consistent basis.</li>
+<li> We will take charge of the Full Accounts of your company Accounts &amp; keep your Accounts Up-dated on a Daily and Consistent basis.</li>
+
+<li> You can rest assured we will like a very confidential and secured company for you.</li>
+
+
 
 
 
