--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ All the companies doing Business in India and earning Net Profits above Rs 3,00,
 
 <ul>
 
-<li>Free Lancers or Self Employed or Consultants/Owners companies like Web Designing, Event Management, Catering Companies, Health Clinics, Law Firms &amp; others.</li>
+<li>Free Lancers or Self Employed or Consultants/Owners companies like Web Designing, Event Management, Catering Companies, rms &amp; others.</li>
 
 <li>Services Providing Companies like Pest Control companies, providing Repairs &amp; Services, Movie Theatres etc.
 All the Start - up Companies</li>
