--- a/index.html
+++ b/index.html
@@ -83,10 +83,10 @@ All the companies doing Business in India and earning Net Profits above Rs 3,00,
 
 <ul>
 
-<li>Free Lancers or Self Employed or Consultants/Owners companies like Web Designing, Event Management, Catering Companies, rms &amp; others.</li>
+<li>Free Lancers or Self Employed or Consultants/Owners companies like Web Designing, Event Management, Catering Companies, &amp; others.</li>
 
-<li>Services Providing Companies like Pest Control companies, providing Repairs &amp; Services, Movie Theatres etc.
-All the Start - up Companies</li>
+<li>Services Providing Companies like Pest Control companies, providing Repairs &amp; Services, Movie Theatres etc. And
+all the other Start - up Companies</li>
 
 
 <li>Small &amp; Medium Trading Companies - trading of all the goods &amp; products in  which you are dealing with.</li>
@@ -149,7 +149,7 @@ All the Start - up Companies</li>
 
 <li> We will take charge of the Full Accounts of your company Accounts &amp; keep your Accounts Up-dated on a Daily and Consistent basis.</li>
 
-<li> You can rest assured we will like a very confidential and secured company for you.</li>
+<li> You can rest assured we will be very confidential and secured company for you.</li>
 
 
 
