--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     
   <tr>
   
-    <td class="add" colspan="2"><br <br>Mob No. 9930789292 Lanline No. 022-21633828<br>email: contact@accfinservices.com<br>web:www.accfinservices.com</td>
+    <td class="add" colspan="2"><br <br>Mob No. 9930789292 Lanline No. 022-21633828<br>Email: <a class="mailto" href="mailto:contact@accfinservices.com">contact@accfinservices.com</a><br>Web: <a href="http://www.accfinservices.com">www.accfinservices.com</a> </td>
   </tr>
 
  <tr>
