--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 
 <div class="intro">
 
-<p>ACCFIN Provides  Full fledged Professional Accounts Writing &amp; Maintaininance Work,  and Handling of Tax Compliances Work and has Networking facilities &amp; Cloud Technology and it Provides its Services by Out Sourcing it to the :-</p>
+<p>ACCFIN Provides  Full fledged Professional Accounts Writing &amp; Maintaininance Services,  and Handling of Tax Compliances Work and has Networking facilities &amp; Cloud Technology and it Provides its Services by Out Sourcing it to the :-</p>
 </div>
 
 
