--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
     
     <td rowspan="3"><img src="/images/TallyERP9.jpg"  alt="accounts Writing" style="width:100px;height:100px;"></td>
   <td  class="title" colspan="2"><img src="/images/accfin-logo.png"  alt="accounts Writing" style="width:100px;height:35px;"> 
-     Services  <h6>Accounts Writing &amp; Finance Management Services </h6></td>
+     Services  <h6>One stop company for Accounts Writing  &amp; Maintenance
+and Tax Compliance Services Company</h6></td>
     <td rowspan="3" ><img src="/images/quickbooks.png"  alt="accounts Writing" style="width:120px;height:100px;"></td>
   </tr>
 
@@ -65,40 +66,55 @@
      </div>
     
 
-   <h1> Accfin Services are Professionals &AMP; Experts in  
+   <h1> Accfin Services are Professionals &AMP; Experienced in  
  providing on ONLINE basis the following services :-   </h1>
 
 <div class="intro">
 
-<p>ACCFIN Provides  Full fledged Professional Accounts Writing &amp; Maintaininance Services,  and Handling of Tax Compliances Work and has Networking facilities &amp; Cloud Technology and it Provides its Services by Out Sourcing it to the :-</p>
+<ul>
+
+<li>Complete &amp; Full fledged Professional Accounts Writing  Services
+ - from Maintaining &amp; Entering of various transactions  into the Books of Accounts then Posting
+ into t he respective Ledgers &amp; then on up to Extracting of Trial Balance up to Finalization Of
+ Accounts upto Prepration of  - [P&amp;L, B/S] - Along with Reconcialtion of Bank Statementss.
+ We can produce all kind of Reports, Statements, with colourful Diagrams &amp; Graphs.  
+Like Budgets, Cash Flow &amp; Fund Flow Statements &amp; AR / AP Aging Reports).</li>
+
+
+<li>Completely Handling of  Various Tax Compliances Services required 
+ We take Complete Responsibilty of GST Tax law based on Cloud Technology - right from 
+ Registration &amp; E-Filing of various Returns and Forms &amp; E-Payments on various Dates &amp; 
+ maintaing it on the clients Accounting system - very Accurately Systematically, on Timelybasis ,
+ with Regularly &amp; Consistent basis and we can handle INCOME - TAX matters of Small
+ &amp; Medium sized Cos. like Pvt Ltd Cos, Partnership Cos, Sole Proprietors Cos –
+ Individuals, and NRIS &amp; other orgns, and we can handle also Pending cases and
+ adjustments of VAT, Service Tax, Excise Duties &amp; Customs Duties etc . We can also
+ handle Payroll Packages.</li>
+
 </div>
+
+<p>Accfin has a Systematic &amp; Secured  Networking  &amp; Cloud Technology facilities.</p>
+
 
 
 <div class="mid">
+<p>ACCFIN PROVIDES THESE SERVICES TO :- </p>
+
 
  <p>- Service Providing / Rendering Companies,</p> 
  <p>- Small &amp; Medium Sized Trading &amp; Manufacturing Companies,</p>
  <p>- Start Up Companies - and </p>
  <p>- Co-operative Housing Societies </p>
- <p>--ON ONLINE BASIS  :- ( i.e. Cloud technology basis ) :-</p>
+ 
 
  </div>
 
 <div class="intro">
 
-
-<ol>
-
-<li>ACCFIN provides Complete Accounts Writing Services - from Entering into Primary Books of Accounts then Posting into t he respective Ledgers &amp; then on up to Extracting of Trial Balance up to Finalization OF A/Cs - [P&amp;L, B/S] - Along with Reconcialtion of Bank Statement Statements. We can produce all kind of Reports, Statements, with colourful Diagrams &amp; Graphs. (like Budgets, Cash Flow Statements &amp; A/R &amp; A/P Aging Reports)</li>
-
-
-<li>ACCFIN Manages &amp; handles Various Tax Compliances Services - We take Full Responsibilty of GST Tax law based on Cloud Technology -  right from Registration &amp; E-Filing of various Returns and Forms &amp; E-Payments on various Dates &amp; maintaining it on the clients Accounting system - very Accurately Systematically, on Timely , Regularly &amp; Consistence basis and we can handle INCOME - TAX matters of Small &amp; Medium sized Cos. like Pvt Ltd Cos, Partnership Cos, Sole Proprietors Cos - Individuals, and NRIS &amp; other orgns, and we can handle also Pending cases of VAT, Service Tax, Excise Duties &amp; Customs Duties etc . We can also handle Payroll Packages.</li>
-
-<li>ACCFIN has  a very Professional Accounts Coaching Division also where a lot of Accounting Topics are taught – like Tally ERP9 , Excel including Macros &amp; VBA and Income Tax Law &amp; GST Tax Law and  also Budgets, Cash &amp; Fund Flow statements, Accounting Ratios, Internal Audits etc.</li>
-
-
-</ol>
-
+<p>ACCFIN provide this Accounts Writing Services &amp; Tax Compliance Services at
+ very affordable prices - at 50% of the Actual Costs &amp; Time presently incurred 
+ by the  Running Companies for the above jobs required to be done.
+And You can easily Out Source these sevices from ACCFIN.</p>
 
 
 </div>
@@ -106,8 +122,19 @@
 
 <div class="mid">
 
-<p>ACCFIN does this work at a very affordable prices - at 50%  of the Actual Costs &amp; Time presently incurred by our Clients/ Customers for the above jobs required to be done.
-We use various Accounting packages like - Tally ERP9 Release 6.0.3 &amp;Quick Books Online Packages . Tally ERP 9 is a Dominant Accounting Package in India and has several years of experience and Quick Books Online Package (QBO) is a new entrant in India from a US renowned company - Intuit . and is based on Cloud Technolgy &amp; offered in SAAS model –it is available on Desk PCs, Lap Tops , Tablets &amp; Smart Phone devices Quick Books is Easy &amp; Intuitive with for those with little Accounting Knowledge &amp; can help manage Accounts on Small Budgets for various Small &amp; Medium sized companies &amp; Start ups. QB can be used Anytime &amp; Anywhere in this world with proper Security &amp; Login-Control Basis.</p>
+<p>ACCFIN uses various Accounting packages like - Tally ERP9 Release 6.0.3
+ &mp; Quick Books Online Packages and various other Accounting Packages. 
+Tally ERP 9 is a Dominant Popular Accounting Package and it has several years of 
+Experience in India  and Quick Books Online Package (QBO) is a new entrant in
+ India from a US renowned company - Intuit . and is based on Cloud Technolgy &amp;
+ offered in SAAS model –it is available on Desk PCs, Lap Tops , Tablets &amp; Smart
+ Phone devices. Quick Books is Easyto operate -  for those with little Accounting
+ Knowledge &amp; can help manage Accounts on Small Budgets for various Small &amp; 
+Medium sized companies &amp; Start ups companies. QB can be used Anytime &amp;
+Anywhere in this world with proper Security &amp; Login-Control Basis.</p>
+
+
+
 
 
 </div>
@@ -115,20 +142,24 @@ We use various Accounting packages like - Tally ERP9 Release 6.0.3 &amp;Quick Bo
 
 <div class="intro">
 
-<p>ACCFIN has a Experienced, Certified &amp; Courteous Accounting Staff and Messenger Employeees working for it. ACCFIN are  Experts in doing the work very Professionally,  Speedily, Accurately and as per requirements and wishes of our Clients/ Customers. We keep everything Confidential with us and between us.</p>
-
-<p>We take the resposibilty of handling the Entire Accounting, Finance and Taxation work of our Clients/ customers. Young Generation Entrpreneurs/ Owners prefer us &amp; are happy with us. We operate as next door neighbors for our Clients/Customers. We provide our services to the entire satisfaction of our Clients/Customers.</p>
-
-<p>Our motto is to make our Clients/ Customers Grow Big &amp; Make more Profits.</p>
+<p>ACCFIN has a Experienced, Certified &amp; Courteous Accounting Staff and smart 
+Messenger staff working for it. ACCFIN are Experts in doing the work very
+ Professionally, Speedily, Accurately and as per requirements and wishes of our
+ Clients or Customers. We keep everything Confidential with us and between us.
+</p>
 
 </div>
 
+<div class="mid">
 
 
+<p>AACFIN takes the responsibilty of handling the Entire Accounting and Taxation
+ work of our Clients or Customers. Young Generation Entrepreneurs &amp; Owners
+ prefer us &amp; are happy with us. We operate as next door neighbors for our Clients
+ or Customers. We provide our Excellent Services to the Entire Satisfaction of them.
+Our motto is to make our Clients or Customers Grow Big &amp; Make more Profits.</p>
 
-
-
-  
+</div>
 
 
 
@@ -148,6 +179,17 @@ Web Site:<a href= "http://www.accfinservices.com"> www.accfinservices.com.
 </address> 
 <br>
 <br>
+
+<div class="intro">
+
+<p>NOTE – ACCFIN has a Professional Accounts Coaching Division - where a lot of 
+Accounting Courses  are taught for the benefits of the Companies &amp; the Employees– like –
+ Tally ERP9 , Quick Books Online Package, Excel  including Macros &amp; VBA and Income Tax 
+ &amp; GST Tax Law and also Preparation &amp; Explaning about Budgets, Cash &amp; Fund Flow
+ statements, Accounting Ratios, Internal Audits, Management of Controls of Accounts &amp; Finance.</p> 
+</div>
+
+
 
 <div class="footer" >
     copyright 2016 @ Accfin Sevices   </div>
