--- a/index.html
+++ b/index.html
@@ -65,26 +65,27 @@ and Tax Compliance Services Company</h6></td>
 
      </div>
     
-
-   <h1> Accfin Services are Professionals &AMP; Experienced in  
+<h1> Accfin Services are Professionals &AMP; Experienced in  
  providing on ONLINE basis the following services :-   </h1>
 
+   
 <div class="intro">
+
 
 <ul>
 
 <li>Complete &amp; Full fledged Professional Accounts Writing  Services
  - from Maintaining &amp; Entering of various transactions  into the Books of Accounts then Posting
- into t he respective Ledgers &amp; then on up to Extracting of Trial Balance up to Finalization Of
- Accounts upto Prepration of  - [P&amp;L, B/S] - Along with Reconcialtion of Bank Statementss.
+ into the respective Ledgers &amp; then  upto Extracting of Trial Balance upto Finalization Of
+ Accounts upto Prepration of  - [P&amp;L, B/S] - Along with Reconcialtion of Bank Statements.
  We can produce all kind of Reports, Statements, with colourful Diagrams &amp; Graphs.  
-Like Budgets, Cash Flow &amp; Fund Flow Statements &amp; AR / AP Aging Reports).</li>
+Like Budgets, Cash Flow &amp; Fund Flow Statements &amp; AR / AP Aging Reports.</li>
 
 
 <li>Completely Handling of  Various Tax Compliances Services required 
  We take Complete Responsibilty of GST Tax law based on Cloud Technology - right from 
- Registration &amp; E-Filing of various Returns and Forms &amp; E-Payments on various Dates &amp; 
- maintaing it on the clients Accounting system - very Accurately Systematically, on Timelybasis ,
+ Registration &amp; e-Filing of various Returns and Forms &amp; e-Payments on various Dates &amp; 
+ maintaing it on the clients Accounting system - very Accurately Systematically, on Timely basis
  with Regularly &amp; Consistent basis and we can handle INCOME - TAX matters of Small
  &amp; Medium sized Cos. like Pvt Ltd Cos, Partnership Cos, Sole Proprietors Cos –
  Individuals, and NRIS &amp; other orgns, and we can handle also Pending cases and
@@ -111,7 +112,7 @@ Like Budgets, Cash Flow &amp; Fund Flow Statements &amp; AR / AP Aging Reports).
 
 <div class="intro">
 
-<p>ACCFIN provide this Accounts Writing Services &amp; Tax Compliance Services at
+<p>ACCFIN provide this Accounts Writing Services &amp;Tax Compliance Services at
  very affordable prices - at 50% of the Actual Costs &amp; Time presently incurred 
  by the  Running Companies for the above jobs required to be done.
 And You can easily Out Source these sevices from ACCFIN.</p>
@@ -123,19 +124,15 @@ And You can easily Out Source these sevices from ACCFIN.</p>
 <div class="mid">
 
 <p>ACCFIN uses various Accounting packages like - Tally ERP9 Release 6.0.3
- &mp; Quick Books Online Packages and various other Accounting Packages. 
+ &amp; Quick Books Online Packages and various other Accounting Packages. 
 Tally ERP 9 is a Dominant Popular Accounting Package and it has several years of 
 Experience in India  and Quick Books Online Package (QBO) is a new entrant in
  India from a US renowned company - Intuit . and is based on Cloud Technolgy &amp;
- offered in SAAS model –it is available on Desk PCs, Lap Tops , Tablets &amp; Smart
- Phone devices. Quick Books is Easyto operate -  for those with little Accounting
+ it is available on Desk PCs, Lap Tops , Tablets &amp; Smart
+ Phone devices. Quick Books is Easy to operate -  for those with little Accounting
  Knowledge &amp; can help manage Accounts on Small Budgets for various Small &amp; 
-Medium sized companies &amp; Start ups companies. QB can be used Anytime &amp;
+Medium sized companies &amp; Start ups companies. QBO can be used Anytime &amp;
 Anywhere in this world with proper Security &amp; Login-Control Basis.</p>
-
-
-
-
 
 </div>
 
@@ -152,8 +149,7 @@ Messenger staff working for it. ACCFIN are Experts in doing the work very
 
 <div class="mid">
 
-
-<p>AACFIN takes the responsibilty of handling the Entire Accounting and Taxation
+<p>ACCFIN takes the responsibilty of handling the Entire Accounting and Taxation
  work of our Clients or Customers. Young Generation Entrepreneurs &amp; Owners
  prefer us &amp; are happy with us. We operate as next door neighbors for our Clients
  or Customers. We provide our Excellent Services to the Entire Satisfaction of them.
@@ -184,10 +180,10 @@ Web Site:<a href= "http://www.accfinservices.com"> www.accfinservices.com.
 
 <p>NOTE – ACCFIN has a Professional Accounts Coaching Division - where a lot of 
 Accounting Courses  are taught for the benefits of the Companies &amp; the Employees– like –
- Tally ERP9 , Quick Books Online Package, Excel  including Macros &amp; VBA and Income Tax 
- &amp; GST Tax Law and also Preparation &amp; Explaning about Budgets, Cash &amp; Fund Flow
- statements, Accounting Ratios, Internal Audits, Management of Controls of Accounts &amp; Finance.</p> 
+ Tally ERP9 with GST, Quick Books Online Package with GST, Excel  including Macros &amp; VBA and Income Tax  &amp; GST Tax Law and also Preparation &amp; Explaining about Budgets, Cash &amp; Fund Flow  statements, Accounting Ratios, Internal Audits, Management of Controls of Accounts &amp; Finance.</p> 
 </div>
+
+<br>
 
 
 
