--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <td  class="title" colspan="2"><img src="/images/accfin-logo.png"  alt="accounts Writing" style="width:100px;height:35px;"> 
      Services  <h6>One stop company for Accounts Writing  &amp; Maintenance
 and Tax Compliance Services Company</h6></td>
-    <td rowspan="3" ><img src="/images/quickbooks.png"  alt="accounts Writing" style="width:100px;height:100px;"></td>
+   <!--- <td rowspan="3" ><img src="/images/quickbooks.png"  alt="accounts Writing" style="width:100px;height:100px;"></td>  -->
   </tr>
 
     
