--- a/index.html
+++ b/index.html
@@ -163,7 +163,13 @@ Our motto is to make our Clients or Customers Grow Big &amp; Make more Profits.<
 
 </div>
  
-
+<form action="https://getsimpleform.com/messages?form_api_token=d8fb10c717179c47b2b00ed1a6678ef0" method="post">
+  <!-- the redirect_to is optional, the form will redirect to the referrer on submission -->
+  <input type='hidden' name='redirect_to' value='<the complete return url e.g. http://fooey.com/thank-you.html>' />
+  <!-- all your input fields here.... -->
+  <input type='text' name='test' />
+  <input type='submit' value='Test form' />
+</form>
 
 <div class="addr">
 
