--- a/index.html
+++ b/index.html
@@ -190,11 +190,12 @@ Please visit our Web Site: <a href= "http://www.accfinservices.com"> www.accfins
  <p  style = "color: #f94405; font-weight: bold; 
     font-style: italic; font-size:18px; " >Avail our services or Refer our Services.</p>
 
- <form class="form-signin" action="http://getsimpleform.com/messages?form_api_token=d8fb10c717179c47b2b00ed1a6678ef0" method="post">
+ 
 
+      <form class="form-signin" action="http://getsimpleform.com/messages?form_api_token=d8fb10c717179c47b2b00ed1a6678ef0" method="post">
       <!-- the redirect_to is optional, the form will redirect to the referrer on submission -->
 
-      <!--<input type='hidden' name='redirect_to' value='http://swanpixels.com/thanks/' />-->
+      <input type='hidden' name='redirect_to' value='https://devidesignac.github.io/' />
       <!-- all your input fields here.... -->
       
 
@@ -205,7 +206,12 @@ Please visit our Web Site: <a href= "http://www.accfinservices.com"> www.accfins
           <textarea type="text" name="assist" placeholder="How can I assist you"></textarea><br>
         
         <button class="btn btn-large btn-primary" type="submit" value='send'>Submit</button>
-      </form>
+        <input type='hidden' name='redirect_to' value='https://devidesignac.github.io/' />
+</form>
+
+
+
+
 <hr>
 
 
