--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@ Please visit our Web Site: <a href= "http://www.accfinservices.com"> www.accfins
 
  
 
-      <form class="form-signin" action="http://getsimpleform.com/messages?form_api_token=d8fb10c717179c47b2b00ed1a6678ef0" method="post">
+      <form class="form-signin" action="https://getsimpleform.com/messages?form_api_token=d8fb10c717179c47b2b00ed1a6678ef0" method="post">
       <!-- the redirect_to is optional, the form will redirect to the referrer on submission -->
 
       <input type='hidden' name='redirect_to' value='https://devidesignac.github.io/' />
@@ -206,7 +206,7 @@ Please visit our Web Site: <a href= "http://www.accfinservices.com"> www.accfins
           <textarea type="text" name="assist" placeholder="How can I assist you"></textarea><br>
         
         <button class="btn btn-large btn-primary" type="submit" value='send'>Submit</button>
-        <input type='hidden' name='redirect_to' value='https://devidesignac.github.io/' />
+
 </form>
 
 
