--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
      Services  <h6>One stop company for Accounts Writing  &amp; Maintenance
 and Tax Compliance Services Company</h6>
  </td>
-   <td rowspan="3" ><img src="/images/quickbooks.png"  alt="accounts Writing" style="width:100px;height:100px;"></td> 
+   <td rowspan="2" ><img src="/images/quickbooks.png"  alt="accounts Writing" style="width:100px;height:100px;"></td> 
    
   </tr>
 
@@ -91,8 +91,7 @@ Like Budgets, Cash Flow &amp; Fund Flow Statements &amp; AR / AP Aging Reports.<
  Individuals, and NRIS &amp; other orgns, and we can handle also Pending cases and
  adjustments of VAT, Service Tax, Excise Duties &amp; Customs Duties etc . We can also
  handle Payroll Packages.</li>
-
-
+<img src="/images/gst.jpg"  alt="accounts Writing" style="width:400px;height:200px;">
 
 </div>
 
@@ -184,7 +183,7 @@ Please visit our Web Site: <a href= "http://www.accfinservices.com"> www.accfins
  <p  style = "color: #f94405; font-weight: bold; 
     font-style: italic; font-size:18px; " >Avail our services or Refer our Services.</p>
 
- 
+   <h3>CONTACT US</h3>
 
       <form class="form-signin" action="https://getsimpleform.com/messages?form_api_token=d8fb10c717179c47b2b00ed1a6678ef0" method="post">
       <!-- the redirect_to is optional, the form will redirect to the referrer on submission -->
@@ -203,20 +202,10 @@ Please visit our Web Site: <a href= "http://www.accfinservices.com"> www.accfins
 
 </form>
 
-
-
-
 <hr>
 
 
- 
-
 </div>
-
- </td>
-</tr>
-</table>
-</form>
 
 <div class="intro">
 
@@ -231,7 +220,7 @@ Accounting Courses  are taught for the benefits of the Companies &amp; the Emplo
 
 <div class="footer" >
     copyright 2016 @ Accfin Sevices   </div>
-    </div>
+    
 
 <div>
 <a href="http://facebook.com/Accfin-Services-138607026502198/?ref=aymt_homepage_panel"><i class="fa fa-facebook-square" style="font-size:36px;color:#0000cc;"></i> </a>
