--- a/index.html
+++ b/index.html
@@ -95,15 +95,24 @@ Like Budgets, Cash Flow &amp; Fund Flow Statements &amp; AR / AP Aging Reports.<
  Individuals, and NRIS &amp; other orgns, and we can handle also Pending cases and
  adjustments of VAT, Service Tax, Excise Duties &amp; Customs Duties etc . We can also
  handle Payroll Packages.</li>
-<img src="/images/gst.jpg"  alt="accounts Writing" style="width:200px;height:150px;">
+
+
+
+
+<img src="/images/gst.jpg"  alt="GST" style="width:200px;height:150px;">
+
+</ul>
 
 </div>
+
 
 <div class="addr">
 
 <p>Accfin has a Systematic &amp; Secured  Networking  &amp; Cloud Technology facilities.</p>
 
 </div>
+
+
 
 
 
@@ -196,11 +205,11 @@ Please visit our Web Site: <a href= "http://www.accfinservices.com"> www.accfins
       <!-- all your input fields here.... -->
       
 
-        <input type="text" name="firstname :" placeholder="First name" /> <br>
-        <input type="text" name="lastname :" placeholder="Last name" /> <br>
-    <input type="text" name="Tel No. :" placeholder="Tel No." /> <br>
-          <input type="text" name="email" placeholder="Email address" /><br>
-          <textarea type="text" name="assist" placeholder="How can I assist you"></textarea><br>
+        First Name : <input type="text" name="firstname :" placeholder="First name" /> <br>
+        Last Name : <input type="text" name="lastname :" placeholder="Last name" /> <br>
+    Tel No : <input type="text" name="Tel No. :" placeholder="Tel No." /> <br>
+      Email Address : <input type="text" name="email" placeholder="Email address" /><br>
+    How can I assist you :   <textarea type="text" name="assist" placeholder="How can I assist you"></textarea><br>
         
         <button class="btn btn-large btn-primary" type="submit" value='send'>Submit</button>
 
