--- a/index.html
+++ b/index.html
@@ -205,13 +205,13 @@ Please visit our Web Site: <a href= "http://www.accfinservices.com"> www.accfins
       <!-- all your input fields here.... -->
       
 
-        First Name : <input type="text" name="firstname :" placeholder="First name" /> <br>
-        Last Name : <input type="text" name="lastname :" placeholder="Last name" /> <br>
-    Tel No : <input type="text" name="Tel No. :" placeholder="Tel No." /> <br>
-      Email Address : <input type="text" name="email" placeholder="Email address" /><br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;First Name : <input type="text" name="firstname :" placeholder="First name" /> <br>
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Last Name : <input type="text" name="lastname :" placeholder="Last name" /> <br>
+    &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Tel No : <input type="text" name="Tel No. :" placeholder="Tel No." /> <br>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Email Address : <input type="text" name="email" placeholder="Email address" /><br>
     How can I assist you :   <textarea type="text" name="assist" placeholder="How can I assist you"></textarea><br>
         
-        <button class="btn btn-large btn-primary" type="submit" value='send'>Submit</button>
+       &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<button class="btn btn-large btn-primary" type="submit" value='send'>Submit</button>
 
 </form>
 
